# Social-Network-Analyzer

./: .gitignore  README.md  pyproject.toml
network_agent/vk_agent/: checker.py  vk_agent.py
